fix spacing 2

--- a/general.css
+++ b/general.css
@@ -10,7 +10,7 @@ body{
 
 .logorow{
 	padding-top: 150px;
-	padding-bottom: 150px;
+	margin-bottom: 300px;
 }
 
 .logo{
